# fullstack-crud-fastapi-flask

./: README.md  database.db  pyproject.toml  struktur.txt
backend/: app.py  editor.py
frontend/: app.py
frontend/templates/: delete.html  index.html  read.html  update.html
